Fix selection of albums in the date tree view.

This bug first appeared in commit 7aa8ffde3f05c36857ee0e36d0131be0affa9b54.

BUG: 333385
FIXED-IN: 4.0.0